fixed RouteService, adding testRouteService
