# TravelSchedule/Services/Protocols/RoutesServiceProtocol.swift
@@ -8,7 +8,14 @@
 import Foundation
 
 typealias Route = Components.Schemas.Route
+typealias StationCode = Operations.getRoute.Input.Query.show_systemsPayload
 
 protocol RouteServiceProtocol {
-    func getRoute(uid: String, from origin: String?, to destination: String?, date: String?) async throws -> Route
+    func getRoute(
+        uid: String,
+        stationCode: StationCode?,
+        from origin: String?,
+        to destination: String?,
+        date: String?
+    ) async throws -> Route
 }
